# Medical-consultation

./: .gitignore  API_SECURITY_IMPROVEMENTS.md  BUGFIX_SCHEMA_ERROR.md  CLAUDE.md  DOCTOR_LIST_SEARCH_API.md  DOCTOR_STATISTICS_API.md  FINAL_FIX_SUMMARY.md  HOW_TO_SEARCH_DOCTORS.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_API.md  SEARCH_LIMIT_FEATURE.md  SEARCH_LIMIT_QUICK_START.md  TRANSACTION_API_DOCUMENTATION.md  location.json  manage.py  pyproject.toml  requirements-docs.txt  test.py  test_schema.py
.claude/: settings.local.json
Medical_consultation/: asgi.py  settings.py  urls.py  wsgi.py
apps/admin_panel/: admin.py  models.py  serializers.py  urls.py  views.py
apps/admin_panel/migrations/: 0001_initial.py  0002_doctorcomplaint_resolution_notes.py
apps/ai_assistant/: prompts.py  services.py  utils.py
apps/api/: context_processors.py  urls.py  views.py
apps/billing/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/billing/migrations/: 0001_initial.py
apps/chat/: admin.py  api_urls.py  api_views.py  models.py  routing.py  serializers.py  urls.py  views.py  web_urls.py
apps/chat/migrations/: 0001_initial.py  0002_initial.py
apps/consultations/: admin.py  api_urls.py  api_views.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/consultations/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/core/: models.py  schema.py  search_limits.py  throttling.py  utils.py
apps/doctors/: admin.py  api_urls.py  api_views.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py  views_statistics.py  web_urls.py
apps/doctors/management/commands/: create_test_data.py  create_test_doctors.py  setup_permissions.py
apps/doctors/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_chatmessagetranslation_consultationtranslation_and_more.py  0005_alter_doctor_diploma_image_and_more.py  0006_alter_doctor_license_number.py  0007_doctorservicename_doctorservice.py  0008_remove_doctor_certificate_images_and_more.py  0009_alter_doctorfiles_unique_together.py  0010_alter_doctorfiles_doctor.py  0011_doctor_lattitude_doctor_longitude.py  0012_rename_lattitude_doctor_latitude.py  0013_doctorservicename_name_en_doctorservicename_name_kr_and_more.py
apps/doctors/services/: translation_service.py
apps/hospitals/: admin.py  apps.py  decorators.py  models.py  serializers.py  urls.py  views.py
apps/hospitals/management/commands/: seed_regions.py
apps/hospitals/migrations/: 0001_initial.py  0002_hospital_founded_year_alter_hospital_hospital_type.py  0003_remove_hospital_services_hospital_specialization_and_more.py  0004_regions_districts.py  0005_rename_hospitals_h_region_737802_idx_hospitals_h_region__5f7dfc_idx_and_more.py  0006_hospital_working_days.py  0007_hospitaltranslation.py  0008_districts_name_en_districts_name_kr_and_more.py
apps/payments/: admin.py  billing_integration.py  models.py  serializers.py  services.py  urls.py  usage_examples.py  views.py  wallet_views.py
apps/payments/migrations/: 0001_initial.py
apps/translate/: admin.py  models.py  urls.py  views.py
apps/translate/migrations/: 0001_initial.py
apps/users/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  tests.py  urls.py  web_urls.py  web_views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_phone.py  0003_alter_user_district_alter_user_region.py
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  PAYMENT_API.md  Payment_API.postman_collection.json  README.md  payment_api_openapi.yaml
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
locale/uz/LC_MESSAGES/: django.po
static/css/: admin_custom.css  admin_custom2.css
templates/: 404.html  500.html  api_docs.html  base.html
templates/admin/: change_list.html  login.html
templates/admin2/: base_site.html  change_list.html  login.html
templates/chat/: chat_room.html
templates/doctors/: doctor_list.html
